2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Remove all-local: $(ARCH).
	* console/Makefile.am: Remove all-local: $(ARCH).
	* scv64/Makefile.am: Remove all-local: $(ARCH).
	* sonic/Makefile.am: Remove all-local: $(ARCH).
	* start/Makefile.am: Remove all-local: $(ARCH).
	* startup/Makefile.am: Remove all-local: $(ARCH).
	* timer/Makefile.am: Remove all-local: $(ARCH).
	* tod/Makefile.am: Remove all-local: $(ARCH).
	* wrapup/Makefile.am: Remove all-local: $(ARCH).

2003-09-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in include/Makefile.am.
	Reflect changes to bsp.am.
	* include/Makefile.am: Remove.
	* configure.ac: Reflect changes above.

2003-09-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bsp_specs: Remove *lib:.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* clock/clock.c, console/debugio.c, include/dmv170.h,
	startup/bspclean.c, startup/genpvec.c, startup/setvec.c,
	startup/vmeintr.c, timer/timer.c: URL for license changed.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* console/conscfg.c, include/bsp.h, scv64/scv64.c, startup/bspstart.c,
	tod/todcfg.c: Removed incorrect statement about copyright assignment.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* clock/Makefile.am: Reflect having moved automake/.
	* console/Makefile.am: Reflect having moved automake/.
	* include/Makefile.am: Reflect having moved automake/.
	* scv64/Makefile.am: Reflect having moved automake/.
	* sonic/Makefile.am: Reflect having moved automake/.
	* start/Makefile.am: Reflect having moved automake/.
	* startup/Makefile.am: Reflect having moved automake/.
	* timer/Makefile.am: Reflect having moved automake/.
	* tod/Makefile.am: Reflect having moved automake/.
	* wrapup/Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
